--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,52 @@ div {
     &#favoriteContainer,&#catalogContainer {
 
         width: 100%;
-        height: 200px;
+        min-height: 350px;
 
         border-top: 2px solid var(--textColor);
         border-bottom: 0px solid var(--textColor);
+        padding: 20px 0 0 20px;
         margin: 12px 0px 12px 5px;
+        box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3);
+
+        gap: 20px;
+    }
+    &#catalogContainer{display: grid; max-height: fit-content;}
+    &#favoriteContainer{display: flex; flex-direction: row; overflow-x: auto; overflow-y: hidden;}
+
+    &.headerContainer {
+
+        display: flex;
+        align-items: self-start;
+        justify-items: center;
+        gap: 10px;
+        margin: 21.44px 0;
+        h2,h1{margin: 2px 0;}
+
+    }
+
+    &.itemContainer {
+
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        padding: 10px;
+        width: 280px;
+        height: auto;
+
+        align-items: center;
+        justify-items: center;
+
+        background-color: var(--windowColor);
+        border-top: 2px solid var(--textColor);
+        box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3); 
+
+        & > img{height: 170px; width: 170px; align-self: center; justify-self: center;}
+        & button.favoriteButton{width: 28px; height: 28px; color: var(--buttonColor);}
+        & button.favoriteButton:hover{color: var(--higlightColor)}
+        & > div{margin: 0px;}
+        & > p{text-wrap: wrap; margin: 0 10px;}
 
     }
 
@@ -59,6 +100,9 @@ main {
     padding: 0 0 0 50px; 
     width: 100%;
     height: 100%;
+
+    overflow-y: auto;
+    overflow-x: hidden;
 
 }
 
@@ -78,19 +122,20 @@ footer {
     padding: 0 0 2px 0; 
     width: 100%;
     & > p{text-align: center;}
+
 }
 
 
 button {
 
-    width: 110px;
-    height: 28px;
-    background-color: var(--backgroundColor);
+    align-self: center;
+    width: 114px;
+    height: 32px;
+    margin: 2px 1px;
+    background-color: var(--windowColor);
     color: var(--textColor);
     border: 2px solid var(--buttonColor);
     border-radius: 3px;
-    
-    margin-left: 10px;
 
     padding: 0;
     font: inherit;  
@@ -99,7 +144,7 @@ button {
     appearance: none;
 
     box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3);
-    transition: all 0.3s ease-out;
+    transition: all 0.2s ease-out;
 
 }
-button:hover {border: 3px solid var(--higlightColor); background-color: var(--windowColor);}
+button:hover {width: 116px; height: 34px; margin: 0px; border: 4px solid var(--higlightColor); background-color: var(--backgroundColor);}
