--- a/css/style.css
+++ b/css/style.css
@@ -147,4 +147,8 @@ button {
     transition: all 0.2s ease-out;
 
 }
+.itemContainer > h2 {
+    margin: 2px 0;
+}
+
 button:hover {width: 116px; height: 34px; margin: 0px; border: 4px solid var(--higlightColor); background-color: var(--backgroundColor);}
