--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ html, body {
     background-color: var(--backgroundColor);
     margin: 0;
     padding: 0; 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     color: var(--textColor);
 
     overflow: hidden;
@@ -34,37 +34,38 @@ div {
         align-items: center;
         justify-content: space-between;
 
-        width: 100%;
-        height: 100%;
-
+        height: 100vh;
     }
 
     &#favoriteContainer,&#catalogContainer {
 
-        width: 100%;
+        width: auto;
         min-height: 350px;
 
         border-top: 2px solid var(--textColor);
         border-bottom: 0px solid var(--textColor);
         padding: 20px 0 0 20px;
-        margin: 12px 0px 12px 5px;
+        margin: 12px 0px 0 5px;
         box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3);
 
         gap: 20px;
     }
-    /* Gente, los estilos de una linea son jeroglificos para alguien que no los hizo, les pido que pongan lineas*/
     &#catalogContainer{
-        display: flex; 
+        display: grid; 
+        grid-template-columns: auto auto auto auto;
+        row-gap: 30px;
+
         max-height: fit-content;
-        overflow-x: auto;
-        overflow-y: hidden;
     }
+
     &#favoriteContainer{
         display: flex; 
         flex-direction: row; 
         overflow-x: auto; 
         overflow-y: hidden;
+        scrollbar-color: var(--textColor) var(--backgroundColor);
     }
+
 
     &.headerContainer {
 
@@ -84,8 +85,9 @@ div {
         gap: 10px;
 
         padding: 10px;
-        width: 280px;
-        height: auto;
+        min-width: 280px;
+        max-width: 280px;
+        max-height: 460px;
 
         align-items: center;
         justify-items: center;
@@ -93,6 +95,9 @@ div {
         background-color: var(--windowColor);
         border-top: 2px solid var(--textColor);
         box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3); 
+
+        overflow-y: auto;
+        overflow-x: hidden;
 
         & > img{height: 170px; width: 170px; align-self: center; justify-self: center;}
         & button.favoriteButton{width: 28px; height: 28px; color: var(--buttonColor);}
@@ -108,12 +113,12 @@ div {
 main {
 
     margin: 0;
-    padding: 0 0 0 50px; 
-    width: 100%;
-    height: 100%;
+    padding: 0 0 0 5vw; 
 
     overflow-y: auto;
     overflow-x: hidden;
+    scrollbar-color: var(--textColor) var(--backgroundColor);
+    width: 95vw;
 
 }
 
@@ -129,6 +134,7 @@ header {
 
 footer {
 
+    border-top: 2px solid var(--textColor);
     background-color: var(--windowColor);
     padding: 0 0 2px 0; 
     width: 100%;
