--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,12 @@ button {
 
 }
 
+#progress-bar {
+    padding: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 button:hover {
     width: 160px; 
     height: 34px; 
