--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ div {
     &#favoriteContainer,&#catalogContainer {
 
         align-items: center;
+
+        display: flex;
         justify-content: center;
 
         width: auto;
@@ -64,6 +66,7 @@ div {
     &#favoriteContainer{
         display: flex; 
         flex-direction: row; 
+        justify-content: flex-start;
         overflow-x: auto; 
         overflow-y: hidden;
 
@@ -182,6 +185,14 @@ button {
     box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3);
     transition: all 0.2s ease-out;
 
+    &.loadButton {
+        animation: load 5s linear 2s infinite alternate;
+    }
+
+    &.loadButton:nth-child(1) {animation-delay: 0.1s;}
+    &.loadButton:nth-child(2) {animation-delay: 0.2s;}
+    &.loadButton:nth-child(3) {animation-delay: 0.3s;}
+
 }
 
 button:hover {
@@ -195,6 +206,12 @@ button:hover {
 }
 
 
+@keyframes load {
+  from {transform: translateY(20px);}
+  to {transform: translateY(0);}
+}
+
+
 
 @media only screen and (max-width: 1835px) {div {&#catalogContainer{grid-template-columns: auto auto auto;}}}
 @media only screen and (max-width: 1315px) {div {&#catalogContainer{grid-template-columns: auto auto;}}}
@@ -203,6 +220,8 @@ button:hover {
         &#catalogContainer{grid-template-columns: auto;}
 
         &#favoriteContainer{
+            display: flex;
+            justify-content: flex-start;
             flex-direction: column; 
             overflow-x: hidden; 
             overflow-y: auto;
