--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ html, body {
     background-color: var(--backgroundColor);
     margin: 0;
     padding: 0; 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     color: var(--textColor);
 
     overflow: hidden;
@@ -34,45 +34,37 @@ div {
         align-items: center;
         justify-content: space-between;
 
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+
     }
 
     &#favoriteContainer,&#catalogContainer {
 
-        align-items: center;
-
-        display: flex;
-        justify-content: center;
-
-        width: auto;
+        width: 100%;
         min-height: 350px;
 
         border-top: 2px solid var(--textColor);
         border-bottom: 0px solid var(--textColor);
         padding: 20px 0 0 20px;
-        margin: 12px 0px 0 5px;
+        margin: 12px 0px 12px 5px;
         box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3);
 
-        gap: 150px;
+        gap: 20px;
     }
+    /* Gente, los estilos de una linea son jeroglificos para alguien que no los hizo, les pido que pongan lineas*/
     &#catalogContainer{
-        display: grid; 
-        grid-template-columns: auto auto auto auto;
-        row-gap: 30px;
-
+        display: flex; 
         max-height: fit-content;
+        overflow-x: auto;
+        overflow-y: hidden;
     }
-
     &#favoriteContainer{
         display: flex; 
         flex-direction: row; 
-        justify-content: flex-start;
         overflow-x: auto; 
         overflow-y: hidden;
-
-        scrollbar-color: var(--textColor) var(--backgroundColor);
     }
-
 
     &.headerContainer {
 
@@ -92,9 +84,8 @@ div {
         gap: 10px;
 
         padding: 10px;
-        min-width: 280px;
-        max-width: 280px;
-        max-height: 460px;
+        width: 280px;
+        height: auto;
 
         align-items: center;
         justify-items: center;
@@ -103,29 +94,11 @@ div {
         border-top: 2px solid var(--textColor);
         box-shadow: 3px 3px 6px 1px rgba(0, 0, 0, 0.3); 
 
-        overflow-y: auto;
-        overflow-x: hidden;
-
-    
         & > img{height: 170px; width: 170px; align-self: center; justify-self: center;}
         & button.favoriteButton{width: 28px; height: 28px; color: var(--buttonColor);}
         & button.favoriteButton:hover{color: var(--higlightColor)}
         & > div{margin: 0px;}
         & > p{text-wrap: wrap; margin: 0 10px;}
-
-        & > div {
-            & > img{height: 170px; width: 170px; align-self: center; justify-self: center;}
-            & button.favoriteButton{width: 28px; height: 28px; color: var(--buttonColor);}
-            & button.favoriteButton:hover{color: var(--higlightColor)}
-            & > div{margin: 0px;}
-            & > p{text-wrap: wrap; margin: 0 10px;}
-            
-            &.descriptCont {
-                overflow-y: auto;
-                overflow-x: hidden;
-            }
-            
-        }
 
     }
 
@@ -135,12 +108,12 @@ div {
 main {
 
     margin: 0;
-    padding: 0 0 0 5vw; 
+    padding: 0 0 0 50px; 
+    width: 100%;
+    height: 100%;
 
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-color: var(--textColor) var(--backgroundColor);
-    width: 95vw;
 
 }
 
@@ -156,7 +129,6 @@ header {
 
 footer {
 
-    border-top: 2px solid var(--textColor);
     background-color: var(--windowColor);
     padding: 0 0 2px 0; 
     width: 100%;
@@ -201,52 +173,4 @@ button:hover {
     solid var(--higlightColor); 
     background-color: 
     var(--backgroundColor);
-}
-
-
-
-@media only screen and (max-width: 1835px) {div {&#catalogContainer{grid-template-columns: auto auto auto;}}}
-@media only screen and (max-width: 1315px) {div {&#catalogContainer{grid-template-columns: auto auto;}}}
-@media only screen and (max-width: 838px) {
-    div {
-        &#catalogContainer{grid-template-columns: auto;}
-
-        &#favoriteContainer{
-            display: flex;
-            justify-content: flex-start;
-            flex-direction: column; 
-            overflow-x: hidden; 
-            overflow-y: auto;
-            max-height: 350px;
-            gap: 20px;
-        }
-
-        &.itemContainer {
-
-            flex-direction: row;
-            gap: 10px;
-
-            padding: 10px;
-            min-width: 100%;
-            max-width: 100%;
-            min-height: 350px;
-            max-height: 350px;
-
-            overflow-y: auto;
-            overflow-x: hidden;
-
-            & > div {
-                & > img{height: 170px; width: 170px; align-self: center; justify-self: center;}
-                & button.favoriteButton{width: 28px; height: 28px; color: var(--buttonColor);}
-                & button.favoriteButton:hover{color: var(--higlightColor)}
-                & > div{margin: 0px;}
-                & > p{text-wrap: wrap; margin: 0 10px;}
-                
-                &.descriptCont {
-                    overflow-y: auto;
-                    overflow-x: hidden;
-                }
-            }
-        }
-    }
 }
