--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,32 @@ button:hover {
 }
 
 
+.loaderinvisible{display: none;}
+.loadervisible span{
+    display: inline-block;
+    animation: wave 1s ease-in-out infinite;
+}
+.loadervisible span:nth-child(1){animation-delay: 0s;}
+.loadervisible span:nth-child(2){animation-delay: 0.1s;}
+.loadervisible span:nth-child(3){animation-delay: 0.2s;}
+.loadervisible span:nth-child(4){animation-delay: 0.3s;}
+.loadervisible span:nth-child(5){animation-delay: 0.4s;}
+.loadervisible span:nth-child(6){animation-delay: 0.5s;}
+.loadervisible span:nth-child(7){animation-delay: 0.6s;}
+.loadervisible span:nth-child(8){animation-delay: 0.7s;}
+.loadervisible span:nth-child(9){animation-delay: 0.8s;}
+.loadervisible span:nth-child(10){animation-delay: 0.9s;}
+
+@keyframes wave {
+    0%, 100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+
 
 @media only screen and (max-width: 1835px) {div {&#catalogContainer{grid-template-columns: auto auto auto;}}}
 @media only screen and (max-width: 1315px) {div {&#catalogContainer{grid-template-columns: auto auto;}}}
