Cambiado forma en donde se agrega el coctel de favoritos al catologo principal

--- a/css/style.css
+++ b/css/style.css
@@ -299,3 +299,12 @@ button:hover {
         }
     }
 }
+
+.get-to-catalog-button {
+    width: 28px;
+    color: var(--buttonColor);
+}
+.get-to-catalog-button:hover {
+    width: 28px;
+    color: var(--higlightColor);
+}
